# Benjrm

./: .dockerignore  .env.example  .gitignore  .spectral.yaml  .trivyignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev.backend  README.md  compose.dev.yaml  compose.yaml  docker-compose.dev.yml  docker-compose.prod.yml  setup-identity-provider.sh  trivy.yaml
.github/: pull_request_template.md
.github/workflows/: build_frontend.yml  build_push_container.yaml  ci.yaml  ci.yml  githubpages.yaml  lint.yaml  lint.yml  openapispec.yaml  schemathesis.yaml  security.yaml  security.yml  spectral.yaml  tests.yaml  tests.yml
api_tests/: .gitignore  Pipfile  schemathesis.toml
api_tests/src/hooks/: __init__.py  use_auth.py  use_filter_errors.py  use_generate_question_body.py  use_postgres_safe_string.py  use_question_ids.py  use_session_id.py
backend/: .trivyignore.yaml  Cargo.toml  README.md  build.rs  check.sh
backend/.cargo/: audit.toml  config.toml
backend/src/: app_data.rs  error.rs  frontend.rs  main.rs  static_file.rs  update_value.rs
backend/src/api/: quiz.rs
backend/src/auth/: entity.rs  mod.rs
backend/src/auth/oidc/: error.rs  handler.rs  mod.rs
backend/src/core/: quiz.rs
backend/src/error/: actix.rs  error_response.rs  macros.rs  mod.rs
backend/src/game_session/: core.rs  mod.rs  test.rs
backend/src/game_session/api/: mod.rs  rest.rs  ws.rs
backend/src/game_session/api/ws/: channel.rs  channel_builder.rs  handler.rs  inner_channel.rs  mod.rs
backend/src/question/: api.rs  entity.rs  mod.rs  test.rs
backend/src/question/answer/: core.rs  mod.rs
backend/src/question/answer/choice/: core.rs  entity.rs  mod.rs  test.rs
backend/src/question/answer/order/: core.rs  mod.rs  test.rs
backend/src/question/core/: mod.rs  neighbors.rs
backend/src/quiz/: api.rs  core.rs  entity.rs  mod.rs  test.rs
config/: imprint.md  privacy.md
database-migrator/: Cargo.toml  README.md
database-migrator/.cargo/: config.toml
database-migrator/src/: lib.rs  m00000000_000000_sample.rs  m20260511_131442_create_user.rs  m20260511_142253_create_quiz.rs  m20260518_165245_create_question.rs  m20260518_173534_create_answer_choice.rs
docs/api/: README.md
docs/asyncapi/: WebSockets.yaml  spectral.yaml
docs/githubpages/: index.html  styles.css
docs/identity-provider/: README.md
docs/identity-provider/assets/: keycloak-bruno.yml
docs/openapispec/: .spectral.yaml  RestInterface.yaml  index.html
docs/traefik/: README.md
frontend/: .dockerignore  .prettierignore  .prettierrc  Dockerfile.dev  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/api/: Quiz.tsx  client.ts  queries.ts  quiz.ts  session.ts  utils.ts
frontend/src/components/: AnswerCard.tsx  AnswerOption.tsx  AnswerPreviewGrid.tsx  CategoryHeader.tsx  CountdownDisplay.tsx  CreateQuizModal.tsx  DashboardHeader.tsx  DiscoverSection.tsx  DownloadableMarkdown.tsx  Footer.tsx  GameHeroSection.tsx  GamePinBadge.tsx  GamePinForm.tsx  GameScreen.tsx  HostGameScreen.tsx  (+32 more)
schemathesis/: Pipfile  schemathesis.toml
schemathesis/src/: conftest.py
services/identity-provider/: Dockerfile  Dockerfile.init
services/traefik/: .env.example  .gitignore  compose.yaml  prepare.sh  traefik.yaml
(+141 files in other folders)
